# winclean_rules

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
rules/高危软件/: soft_mgr.yaml
src/packer/: main.rs
