[package]
name = "winclean-rules-packer"
version = "0.1.0"
edition = "2021"
description = "WinClean Rules Packer - 将YAML规则打包为二进制格式"
authors = ["WinClean Contributors"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
bincode = "1.3"
zstd = "0.11"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"

[[bin]]
name = "winclean-rules-packer"
path = "src/packer/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
